Contact Us Page and changes in UI

--- a/web-farm/src/HomePage/Header.css
+++ b/web-farm/src/HomePage/Header.css
@@ -7,3 +7,8 @@
     color: lightgray; /* Optional: Change hover color */
     text-decoration: none; /* Ensure there's no underline on hover */
 }
+
+.logo {
+    width: 10rem;
+    height: 3rem;
+}
