--- a/web-farm/src/Info_Page/Components/info_page.css
+++ b/web-farm/src/Info_Page/Components/info_page.css
@@ -2,7 +2,7 @@
 .info-page {
     text-align: center;
     padding: 20px;
-    background: url('NiceBG.jpg') no-repeat center center fixed;
+    /*background: url('./services/NiceBG.jpg') no-repeat center center fixed;*/
     background-size: cover;
     min-height: 100vh;
     display: flex;
@@ -14,6 +14,15 @@
     text-shadow: 1px 1px 2px #000;
 }
 
+.bg-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; /* Send to back */
+}
 .info-title-box {
     padding: 10px 10px;
     border-radius: 10px;
